--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -85,31 +85,31 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="">Home Energy Assessments</a></h3>
+            <h3><a href="">Design and Consultation</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="">HERS Ratings</a></h3>
+            <h3><a href="">Installation and Maintenance</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-calendar-todo-line"></i>
-            <h3><a href="">Energy Modeling</a></h3>
+            <h3><a href="">Financing and Incentives</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Certification and Compliance</a></h3>
+            <h3><a href="">Monitoring and Optimization</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-database-2-line"></i>
-            <h3><a href="">Consulting and Education</a></h3>
+            <h3><a href="">Education and Outreach</a></h3>
           </div>
         </div>
       </div>
