--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -75,8 +75,8 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Power Your Home with Clean Energy from California Solar Group<span>.</span></h1>
-          <h2>Harness the Sun's Energy for Savings and Sustainability in California
+          <h1>Go Green with California Solar Group's Residential and Commercial Solar Solutions<span>.</span></h1>
+          <h2>Harness the Power of the Sun for Your Home or Business, While Saving Money and the Environment
           </h2>
         </div>
       </div>
