--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
-            <i class="ri-paint-brush-line"></i>
+            <i class="ri-cog"></i>
             <h3><a href="">Monitoring and Optimization</a></h3>
           </div>
         </div>
