--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -622,8 +622,8 @@ Energy raters can provide ratings for residential and commercial buildings to de
                 </div>
               </div>
               <div class="member-info">
-                <h4>Manya Sulikhanyan</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Armen Vahanyan</h4>
+                <span>Founder and CEO</span>
               </div>
             </div>
           </div>
@@ -640,8 +640,8 @@ Energy raters can provide ratings for residential and commercial buildings to de
                 </div>
               </div>
               <div class="member-info">
-                <h4>TBD</h4>
-                <span>Marketing</span>
+                <h4>Danny Thomson</h4>
+                <span>Operations manager</span>
               </div>
             </div>
           </div>
@@ -651,15 +651,15 @@ Energy raters can provide ratings for residential and commercial buildings to de
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href="https://twitter.com/TheKingGaston"><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href="https://www.linkedin.com/in/armen-merikyan-abab52217/"><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Armen</h4>
-                <span>CTO</span>
+                <h4>Lucy Arevyan</h4>
+                <span>Chief financial officer</span>
               </div>
             </div>
           </div>
@@ -676,8 +676,8 @@ Energy raters can provide ratings for residential and commercial buildings to de
                 </div>
               </div>
               <div class="member-info">
-                <h4>Henry Merikyan</h4>
-                <span>Chief Inspector</span>
+                <h4>Tigran Ter Avetisyan</h4>
+                <span>Installation department</span>
               </div>
             </div>
           </div>
