--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -129,24 +129,24 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>
-              Accurate Ratings, Expert Advice: Meet AccuRaters - Your Home Energy Efficiency Partner in California
+              California Solar Group is a leading solar energy company dedicated to providing innovative and affordable solar solutions to homeowners and businesses in California.
             </h3>
             <p class="fst-italic">
-              At AccuRaters, we are committed to helping homeowners and builders optimize their energy usage and reduce their carbon footprint through accurate HERS ratings and expert advice.
+              With a team of experienced solar experts and top-of-the-line solar equipment, California Solar Group is committed to helping its customers reduce their carbon footprint and lower their energy bills. From solar panel installation and maintenance to energy storage solutions and financing options, California Solar Group strives to make the transition to solar energy as seamless and hassle-free as possible for its customers.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i>
-                Certified HERS Raters with years of experience in the field.
+                California Solar Group offers a range of customizable solar solutions tailored to the unique energy needs and goals of its customers, including solar panel installation, solar battery storage, EV charging stations, and more.
               </li>
               <li><i class="ri-check-double-line"></i>
-                Extensive knowledge of energy efficiency best practices, green building standards, and local regulations.
+                The company is committed to using only the highest quality solar equipment and technologies, sourced from reputable manufacturers and backed by comprehensive warranties and guarantees.
               </li>
               <li><i class="ri-check-double-line"></i>
-                Comprehensive services that cover every aspect of energy efficiency, from assessments and ratings to consulting and education.
+                California Solar Group prides itself on its dedication to customer satisfaction, offering personalized consultations, transparent pricing, and ongoing support and maintenance to ensure that its customers get the most out of their solar systems.
               </li>
             </ul>
             <p>
-              AccuRaters is a leading provider of home energy efficiency services based in Los Angeles. Our certified HERS Raters have years of experience in the field and extensive knowledge of energy efficiency best practices, green building standards, and local regulations. We offer comprehensive services that cover every aspect of energy efficiency, including energy assessments, HERS ratings, energy modeling, certification and compliance, consulting, and education. Our mission is to help homeowners and builders optimize their energy usage, reduce their carbon footprint, and save money on their energy bills. Whether you are looking to build a new home, remodel an existing one, or simply improve its energy efficiency, our team can help. Contact us today to learn more about how our expert HERS Raters can help you achieve your energy efficiency goals and meet energy codes and standards such as California's Title 24 Energy Code.
+              At California Solar Group, we believe that solar energy is the future, and we are passionate about helping our customers reap the many benefits of this sustainable and cost-effective energy source.
             </p>
           </div>
         </div>
