--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -129,7 +129,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>
-              California Solar Group is a leading solar energy company dedicated to providing innovative and affordable solar solutions to homeowners and businesses in California.
+              California Solar Group provides affordable solar solutions to homes and businesses in California.
             </h3>
             <p class="fst-italic">
               With a team of experienced solar experts and top-of-the-line solar equipment, California Solar Group is committed to helping its customers reduce their carbon footprint and lower their energy bills. From solar panel installation and maintenance to energy storage solutions and financing options, California Solar Group strives to make the transition to solar energy as seamless and hassle-free as possible for its customers.
