--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -132,7 +132,7 @@
               California Solar Group provides affordable solar solutions to homes and businesses in California.
             </h3>
             <p class="fst-italic">
-              With a team of experienced solar experts and top-of-the-line solar equipment, California Solar Group is committed to helping its customers reduce their carbon footprint and lower their energy bills. From solar panel installation and maintenance to energy storage solutions and financing options, California Solar Group strives to make the transition to solar energy as seamless and hassle-free as possible for its customers.
+              California Solar Group helps customers transition to solar energy seamlessly with expert installation, maintenance, storage, and financing options.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i>
