--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -142,7 +142,7 @@
                 The company is committed to using only the highest quality solar equipment and technologies, sourced from reputable manufacturers and backed by comprehensive warranties and guarantees.
               </li>
               <li><i class="ri-check-double-line"></i>
-                California Solar Group prides itself on its dedication to customer satisfaction, offering personalized consultations, transparent pricing, and ongoing support and maintenance to ensure that its customers get the most out of their solar systems.
+                California Solar Group is dedicated to customer satisfaction with personalized consultations, transparent pricing, and ongoing support for optimal solar system performance.
               </li>
             </ul>
             <p>
