--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -184,28 +184,30 @@
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-receipt"></i>
-              <h4>Quality</h4>
-              <p>Accu Raters provides accurate and reliable ratings.
+              <h4>Experience and Expertise</h4>
+              <p>
+                People might choose California Solar Group because of their experience and expertise in the solar industry. A company that has been in business for a long time and has a proven track record of successful solar installations might inspire confidence in their ability to deliver quality service.
               </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-cube-alt"></i>
-              <h4>Attention to detail</h4>
+              <h4>High-Quality Equipment</h4>
               <p>
-                Our experienced team uses the latest technology and methodologies to ensure the highest quality results.
+                The quality of the solar panels, inverters, and other equipment used in a solar installation can have a significant impact on the system's performance and durability. People might choose a company that uses high-quality equipment from reputable manufacturers to ensure the longevity and efficiency of their solar system.
               </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-images"></i>
-              <h4>Flexible</h4>
+              <h4>Financing Options</h4>
               <p>
-                We offer fast turnaround times and competitive pricing.</p>
+                Solar installations can be a significant investment, so people might look for a solar company that offers financing options to make the cost more manageable. Some companies offer a variety of financing options, including leases, loans, and power purchase agreements, to suit different budgets and preferences.
+              </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-shield"></i>
-              <h4>Customer satisfaction</h4>
+              <h4>Customer Service</h4>
               <p>
-                Our customer support team is always available to answer any questions or concerns.
+                Good customer service is essential when choosing a solar company. People might look for a company that provides clear and transparent communication throughout the installation process, answers questions promptly, and provides ongoing support and maintenance services after the installation is complete.
               </p>
             </div>
           </div>
