--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -229,19 +229,19 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Energy efficiency ratings</a></h4>
+              <h4><a href="">Solar Consultation</a></h4>
               <p>
-Energy raters can provide ratings for residential and commercial buildings to determine their energy efficiency. These ratings can help building owners and managers identify areas where energy is being wasted and recommend ways to improve efficiency.
-</p>
+                This service includes a thorough evaluation of the customer's energy needs, site assessment, and solar potential. They provide customized solar system recommendations based on the customer's unique requirements, budget, and preferences.
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Energy audits</a></h4>
+              <h4><a href="">Solar System Design</a></h4>
               <p>
-                Energy raters can perform energy audits to identify areas where buildings are losing energy, such as through air leaks or insufficient insulation. They can then recommend improvements to reduce energy consumption and save money.
+                The company's team of engineers and designers develop detailed solar system designs, ensuring that the system meets both the customer's energy needs and local building regulations. The design process includes component selection, layout planning, and shading analysis to maximize system performance.
               </p>
             </div>
           </div>
@@ -249,9 +249,9 @@ Energy raters can provide ratings for residential and commercial buildings to de
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">HERS ratings</a></h4>
+              <h4><a href="">Solar Installations</a></h4>
               <p>
-                Home Energy Rating System (HERS) ratings are used to certify homes for energy efficiency. Energy raters can perform HERS ratings to help homeowners understand how much energy their homes are using and identify ways to improve efficiency.
+                California Solar Group's team of certified and experienced installers ensure that the solar systems are installed safely, efficiently, and according to the highest industry standards. They handle all aspects of the installation process, from permitting to system commissioning.
               </p>
             </div>
           </div>
@@ -259,9 +259,9 @@ Energy raters can provide ratings for residential and commercial buildings to de
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Energy code compliance testing</a></h4>
+              <h4><a href="">Solar Financing</a></h4>
               <p>
-                Energy raters can perform energy code compliance testing to ensure that buildings meet local and national energy codes. This can help building owners and managers avoid costly fines and penalties for non-compliance.
+                The company offers various financing options to make solar energy more accessible to their customers. They can help clients navigate through solar incentives, rebates, and tax credits, as well as providing flexible payment plans and competitive solar loan options.
               </p>
             </div>
           </div>
@@ -269,9 +269,9 @@ Energy raters can provide ratings for residential and commercial buildings to de
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Indoor air quality testing</a></h4>
+              <h4><a href="">Solar Maintenance and Monitoring</a></h4>
               <p>
-                Energy raters can perform indoor air quality testing to assess the air quality inside buildings and recommend improvements to reduce pollutants and improve health.
+                To ensure optimal system performance and longevity, California Solar Group offers comprehensive maintenance and monitoring services. These services include routine system checks, performance monitoring, and addressing any potential issues that may arise over the system's lifespan.
               </p>
             </div>
           </div>
@@ -279,9 +279,9 @@ Energy raters can provide ratings for residential and commercial buildings to de
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Green building certifications</a></h4>
+              <h4><a href="">Commercial Solar Solutions</a></h4>
               <p>
-                Energy raters can assist with obtaining green building certifications such as LEED (Leadership in Energy and Environmental Design) and Energy Star certifications. These certifications demonstrate a commitment to energy efficiency and sustainability.
+                California Solar Group also caters to the unique energy needs of commercial customers. They offer customized solar solutions for businesses of all sizes, from small retail shops to large industrial facilities, helping them reduce energy costs and achieve their sustainability goals.
               </p>
             </div>
           </div>
