--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -297,10 +297,10 @@
 
         <div class="text-center">
           <h3>
-            Improve Your Building's Efficiency with Accu Raters' Energy Rating Services
+            California Solar Group: Get Your Free Quote for a Brighter, Greener Future!
             </h3>
           <p>
-            Looking to save money and reduce energy consumption in your building? Accu Raters can help! We offer a range of energy rating and auditing services, including HERS ratings, energy code compliance testing, and green building certifications. Our experienced team uses cutting-edge technology and methods to ensure accurate and reliable results. Contact us today to request our services or receive a quote, and let us help you transform your building into an energy-efficient powerhouse!
+            Description: Discover the benefits of solar energy with California Solar Group. Request a free quote for solar panel installation, tailored financing options, and expert guidance. Save money, reduce your carbon footprint, and enjoy clean, renewable power. #CaliforniaSolarGroup #FreeQuote #SolarPanels #CleanEnergy
           </p>
           <a class="cta-btn" href="https://forms.gle/yZjvXt3xdQdvxyG67">Get Quote</a>
         </div>
