--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -297,10 +297,11 @@
 
         <div class="text-center">
           <h3>
-            California Solar Group: Get Your Free Quote for a Brighter, Greener Future!
+
+            Get Your Free Quote for a Brighter, Greener Future!
             </h3>
           <p>
-            Description: Discover the benefits of solar energy with California Solar Group. Request a free quote for solar panel installation, tailored financing options, and expert guidance. Save money, reduce your carbon footprint, and enjoy clean, renewable power. #CaliforniaSolarGroup #FreeQuote #SolarPanels #CleanEnergy
+           Discover the benefits of solar energy with California Solar Group. Request a free quote for solar panel installation, tailored financing options, and expert guidance. Save money, reduce your carbon footprint, and enjoy clean, renewable power. #CaliforniaSolarGroup #FreeQuote #SolarPanels #CleanEnergy
           </p>
           <a class="cta-btn" href="https://forms.gle/yZjvXt3xdQdvxyG67">Get Quote</a>
         </div>
@@ -470,10 +471,11 @@
           <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch" data-aos="fade-left" data-aos-delay="100">
             <div class="content d-flex flex-column justify-content-center">
               <h3>
+                Experience the California Solar Group Difference: Countless Happy Clients and Completed Projects!
                 Accu Raters delivers exceptional performance numbers
               </h3>
               <p>
-                At Accu Raters, we are proud to have consistently delivered exceptional performance numbers. With a track record of successful projects, high levels of customer satisfaction, and recognition from our peers, we have proven ourselves as a leader in the industry. Contact us today to learn more about how we can help with your needs.
+                California Solar Group is the trusted choice for solar panel installation and service. With a proven track record of delighted clients and numerous successful projects under our belt, you can rely on us for unparalleled expertise and exceptional customer care. #CaliforniaSolarGroup #ClientSatisfaction #SolarProjects #RenewableEnergy
               </p>
               <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
