--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -472,7 +472,6 @@
             <div class="content d-flex flex-column justify-content-center">
               <h3>
                 Experience the California Solar Group Difference: Countless Happy Clients and Completed Projects!
-                Accu Raters delivers exceptional performance numbers
               </h3>
               <p>
                 California Solar Group is the trusted choice for solar panel installation and service. With a proven track record of delighted clients and numerous successful projects under our belt, you can rely on us for unparalleled expertise and exceptional customer care. #CaliforniaSolarGroup #ClientSatisfaction #SolarProjects #RenewableEnergy
@@ -503,7 +502,7 @@
                     <i class="bi bi-clock"></i>
                     <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="4" class="purecounter"></span>
                     <p><strong>Years of experience</strong>
-                      Our team has been providing top-quality Raters services for over a decade, giving us the skills and expertise to handle any project.
+                      Our team has been providing top-quality solar services for over a decade, giving us the skills and expertise to handle any project.
                     </p>
                   </div>
                 </div>
