--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -825,7 +825,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Accu Raters</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>California Solar Group</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
