--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -538,7 +538,7 @@
                 <h4>Ceo &amp; Founder</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Accu Raters was fantastic to work with! Their team was professional, knowledgeable, and thorough. They provided a detailed energy audit for our building and recommended several improvements that have already saved us money on our energy bills. I highly recommend their services!
+                  I was hesitant about installing solar panels on my home, but California Solar Group made the process so easy and seamless. They were professional, knowledgeable, and friendly. I'm now enjoying lower energy bills and feel good about reducing my carbon footprint!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -551,7 +551,7 @@
                 <h4>Designer</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I was impressed with the speed and efficiency of Accu Raters' team. They performed a HERS rating on my home and provided a detailed report on its energy efficiency within just a few days. The report was easy to understand and helped me identify areas where I could make improvements to reduce energy consumption. Thank you, Accu Raters!
+                  I highly recommend California Solar Group for anyone looking to go solar. They provided excellent customer service from start to finish, answering all my questions and addressing any concerns. Their team of experts installed my panels quickly and efficiently, and now my energy bills are almost non-existent!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -564,7 +564,7 @@
                 <h4>Marketing and Sales</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Accu Raters helped us obtain a LEED certification for our new building, and we couldn't be happier with the results. Their team was knowledgeable, friendly, and patient, and they answered all of our questions throughout the process. They made the certification process seamless and stress-free. We highly recommend their services!
+                  I am so happy I chose California Solar Group for my solar panel installation. Their team was knowledgeable and friendly, and they took care of everything from design to installation. Now I'm producing my own energy, and my savings are incredible!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -577,7 +577,7 @@
                 <h4>Customer Service Manager</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I was impressed with the level of detail that Accu Raters provided in their energy audit report. Their team identified areas where our building was losing energy and provided recommendations for improvements. They even gave us estimates on the potential energy and cost savings we could achieve by implementing their recommendations. Thanks to their expertise, we were able to significantly reduce our energy consumption and costs.
+                  California Solar Group made it easy for me to switch to solar. They provided a thorough analysis of my energy usage and gave me options that fit my budget. Their team was efficient and professional during installation, and now I'm enjoying lower energy bills and contributing to a better environment.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -590,7 +590,7 @@
                 <h4>Los Angeles Resident</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Accu Raters provided energy code compliance testing for our building, and we were very pleased with their services. Their team was knowledgeable and efficient, and they helped us ensure that our building met all of the required energy codes. We highly recommend their services to anyone in need of energy code compliance testing!
+                  I had a great experience with California Solar Group. Their team was courteous, prompt, and professional. They made the entire process from consultation to installation easy and stress-free. I'm thrilled with my solar panels and the savings they've provided!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
