--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -322,9 +322,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Ratings</li>
-              <li data-filter=".filter-card">Audits</li>
-              <li data-filter=".filter-web">Testing</li>
+              <li data-filter=".filter-app">Residential</li>
+              <li data-filter=".filter-card">Commercial</li>
+              <li data-filter=".filter-web">Industrial</li>
             </ul>
           </div>
         </div>
