--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -48,7 +48,7 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto" href="tel:888888888">(888) 888-8888</a></li>
+          <li><a class="nav-link scrollto" href="tel:888045950">(888) 804-5950</a></li>
           <li class="dropdown"><a href="#"><span>Discover</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a class="nav-link scrollto" href="#about">About Us</a></li>
@@ -718,13 +718,13 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@casolgroup.ai</p>
+                <p>info@casolargroup.io</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>(888) 888-8888</p>
+                <p>(888) 804-5950</p>
               </div>
 
             </div>
@@ -777,8 +777,8 @@
               <p>
                 7647 Hayvenhurst Ave, Unit 26, <br>
                 Van Nuys, CA 91406, USA<br>
-                <strong>Phone:</strong> (888) 888-8888<br>
-                <strong>Email:</strong> info@casolgroup.com<br>
+                <strong>Phone:</strong> (888) 804-5950<br>
+                <strong>Email:</strong> info@casolgroup.io<br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
