--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -709,7 +709,7 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
+                <h4>casolargroup<span>.</span>io</h4>
                 <p>
                     7647 Hayvenhurst Ave, Unit 26, Van Nuys, CA 91406, USA
                 </p>
@@ -773,7 +773,8 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>California Solar Group<span>.</span></h3>
+              <h3>California Solar Group</h3>
+              <h4>casolargroup<span>.</span>io</h4>
               <p>
                 7647 Hayvenhurst Ave, Unit 26, <br>
                 Van Nuys, CA 91406, USA<br>
