--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -85,19 +85,19 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="">Design and Consultation</a></h3>
+            <h3><a href="">Design & Consultation</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="">Installation and Maintenance</a></h3>
+            <h3><a href="">Installation & Maintenance</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-calendar-todo-line"></i>
-            <h3><a href="">Financing and Incentives</a></h3>
+            <h3><a href="">Financing & Incentives</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
@@ -109,7 +109,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-database-2-line"></i>
-            <h3><a href="">Education and Outreach</a></h3>
+            <h3><a href="">Education & Outreach</a></h3>
           </div>
         </div>
       </div>
