--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -645,7 +645,18 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/team/team-2.png" class="img-fluid" alt="">
+                <img src="assets/img/team/team-2.png" id="image_2" class="img-fluid" alt="">
+                <script>
+                  var image = document.getElementById("image_2");
+
+                  image.addEventListener("mouseover", function() {
+                    image.src = "assets/img/team/team-2.jpg";
+                  });
+
+                  image.addEventListener("mouseout", function() {
+                    image.src = "assets/img/team/team-2.png";
+                  });
+                </script>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -663,7 +674,18 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/team/team-3.png" class="img-fluid" alt="">
+                <img src="assets/img/team/team-3.png" id="image_3" class="img-fluid" alt="">
+                <script>
+                  var image = document.getElementById("image_3");
+
+                  image.addEventListener("mouseover", function() {
+                    image.src = "assets/img/team/team-3.jpg";
+                  });
+
+                  image.addEventListener("mouseout", function() {
+                    image.src = "assets/img/team/team-3.png";
+                  });
+                </script>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -681,7 +703,18 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="assets/img/team/team-4.png" class="img-fluid" alt="">
+                <img src="assets/img/team/team-2.png" id="image_4" class="img-fluid" alt="">
+                <script>
+                  var image = document.getElementById("image_4");
+
+                  image.addEventListener("mouseover", function() {
+                    image.src = "assets/img/team/team-4.jpg";
+                  });
+
+                  image.addEventListener("mouseout", function() {
+                    image.src = "assets/img/team/team-4.png";
+                  });
+                </script>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
