--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -620,11 +620,11 @@
                 <script>
                   var image = document.getElementById("image_1");
 
-                  image.addEventListener("mouseover", function() {
+                  image.addEventListener("mouseover1", function() {
                     image.src = "assets/img/team/team-1.jpg";
                   });
 
-                  image.addEventListener("mouseout", function() {
+                  image.addEventListener("mouseout1", function() {
                     image.src = "assets/img/team/team-1.png";
                   });
                 </script>
@@ -649,11 +649,11 @@
                 <script>
                   var image = document.getElementById("image_2");
 
-                  image.addEventListener("mouseover", function() {
+                  image.addEventListener("mouseover2", function() {
                     image.src = "assets/img/team/team-2.jpg";
                   });
 
-                  image.addEventListener("mouseout", function() {
+                  image.addEventListener("mouseout2", function() {
                     image.src = "assets/img/team/team-2.png";
                   });
                 </script>
@@ -678,11 +678,11 @@
                 <script>
                   var image = document.getElementById("image_3");
 
-                  image.addEventListener("mouseover", function() {
+                  image.addEventListener("mouseover3", function() {
                     image.src = "assets/img/team/team-3.jpg";
                   });
 
-                  image.addEventListener("mouseout", function() {
+                  image.addEventListener("mouseout3", function() {
                     image.src = "assets/img/team/team-3.png";
                   });
                 </script>
@@ -707,11 +707,11 @@
                 <script>
                   var image = document.getElementById("image_4");
 
-                  image.addEventListener("mouseover", function() {
+                  image.addEventListener("mouseover4", function() {
                     image.src = "assets/img/team/team-4.jpg";
                   });
 
-                  image.addEventListener("mouseout", function() {
+                  image.addEventListener("mouseout4", function() {
                     image.src = "assets/img/team/team-4.png";
                   });
                 </script>
